# fanforum-crawler

./: .gitignore  README.md  main.py  pyproject.toml  scrapy.cfg
fanforum_crawler/: items.py  main.py  middlewares.py  pipelines.py  qodana.yaml  settings.py  string_utils.py
fanforum_crawler/spiders/: fanforum_spider.py
src/: main.py  spiders.py
tests/: test_fanforum_crawler.py
