[tool.poetry]
name = "fanforum-crawler"
version = "0.1.0"
description = "A simple tool written in Python for crawling my fan forum"
authors = ["Endre Farkas Kiss <fernstudiumva@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
