[tool.poetry]
name = "fanforum-crawler"
version = "0.1.0"
description = "A simple tool written in Python for crawling my fan forum"
authors = ["Endre Farkas Kiss <fernstudiumva@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.6.1"
pydantic = "^1.9.0"
pendulum = "^2.1.2"
SQLAlchemy = "^1.4.36"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
